<resources>
    <string name="app_name">FOODONUS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_foodonor">Welcome to FoodOnUs</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="already_having_an_account">Already having an account?</string>
    <string name="fill_in_the_details_to_create_account">Fill in the details to create account</string>
    <string name="loading">Loading..</string>
    <string name="help">Help</string>
    <string name="my_pins">My pins</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="history">History</string>
    <string name="about_us">About Us</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="receiver_name">Receiver name</string>
    <string name="food_item">Food item</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="donated_food_item">Donated Food Item</string>
    <string name="forexample_gmail_com">forexample@gmail.com</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="resturant_donor">Resturant</string>
    <string name="organization_receiver">Organization</string>
    <string name="admin">Admin</string>
</resources>