<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <com.google.android.material.card.MaterialCardView
                xmlns:Card_View="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                Card_View:cardCornerRadius="5dp"
                Card_View:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/black"
                        android:hint="@string/receiver_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:hintTextColor="@color/black"
                        app:boxStrokeColor="@color/orange">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/receivername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"
                            android:inputType="text"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@android:color/transparent"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:importantForAutofill="no"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        android:textSize="20sp"
                        app:boxStrokeColor="@color/orange">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/description"
                            android:textSize="20sp"
                            android:inputType="textMultiLine"
                            android:maxLines="10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@android:color/transparent"
                            android:importantForAutofill="no"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <fragment
                        android:id="@+id/google_map"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="20dp"
                        map:uiZoomControls="true"
                        tools:ignore="FragmentTagUsage" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submitBtn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        Card_View:cornerRadius="20dp"
                        android:backgroundTint="@color/orange"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>